[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Raul Albuquerque <raulmalbuquerque2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"
factory-boy = "^3.3.0"
django = "^5.0.3"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "black --line-length=100 ."
